--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <!--meal item-->
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="/assets/img/pancake.png" alt="food" height="260px">
+                            <img src="pancake.png" alt="food" height="260px">
                         </div>
                         <div class="meal-name">
                             <h3>Pancake</h3>
@@ -73,7 +73,7 @@
                     <!--meal item-->
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="/assets/img/pizza.png" alt="food" height="260px">
+                            <img src="pizza.png" alt="food" height="260px">
                         </div>
                         <div class="meal-name">
                             <h3>Pizza</h3>
@@ -84,7 +84,7 @@
                     <!--  meal item  -->
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="/assets/img/biryani.png" alt="food" height="260px">
+                            <img src="biryani.png" alt="food" height="260px">
                         </div>
                         <div class="meal-name">
                             <h3>Biryani</h3>
@@ -208,6 +208,7 @@
     </script> -->
 
     <script src="/assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
